--- a/test-radio.html
+++ b/test-radio.html
@@ -1,6 +1,8 @@
 <!document html>
 <html lang="ko">
 <head>
+  <meta charset="utf-u">
+  <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <style>
 *{margin:0;padding:0}
 input[type="radio"]{
