--- a/test-radio.html
+++ b/test-radio.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <style>
 *{margin:0;padding:0}
+div{
+  position: relative;
+}
 input[type="radio"]{
   width: 1px;
   height: 1px;
