--- a/test-radio.html
+++ b/test-radio.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <style>
 *{margin:0;padding:0}
+body{
+  padding: 40px;
+}
 div{
   position: relative;
+  padding: 10px 0;
 }
 input[type="radio"]{
   width: 1px;
@@ -15,6 +19,7 @@ input[type="radio"]{
   background: transparent;
 }
 input[type="radio"] + label{
+  display: block;
   min-height: 17px;
   padding: 5px 7px 3px 22px;
   border: 0;
