--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 $(function(){
 	var winWidth = $( window ).width(),
-		winHeight = $( window ).height(),
+		winHeight = $( window ).height() + 20,
 		calc = ( winWidth*9 ) / 16;
 	if( winWidth < winHeight ){
 		$( '#youtube_Video' ).css('height', calc);
