--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 <div id="hwi__video" class="hwi__video">
 	<button type="button" class="hwi__video--play"></button>
 	<div>
-		<iframe style="width:100%;min-height:211px;height:auto" id="youtube_Video" src="https://www.youtube.com/embed/dBD54EZIrZo?enablejsapi=1&amp;version=3&amp;loop=1&amp;playerapiid=ytplayer&amp;playsinline=1&amp;rel=0&amp;controls=2&amp;vq=hd720&amp;modestbranding=0&amp;playlist=dBD54EZIrZo&amp;origin=https://verybon.github.io/youtube/" frameborder="0" allowfullscreen="true" allowscriptaccess="always" title="youtube"></iframe>
+		<iframe style="width:100%;min-height:211px;height:auto" id="youtube_Video" 
+			src="https://www.youtube.com/embed/614oSsDS734?enablejsapi=1&amp;version=3&amp;loop=1&amp;playerapiid=ytplayer&amp;playsinline=1&amp;rel=0&amp;controls=2&amp;vq=hd720&amp;modestbranding=0&amp;playlist=614oSsDS734&amp;origin=https://verybon.github.io/youtube/" 
+			frameborder="0" 
+			allowfullscreen="true" 
+			allowscriptaccess="always" 
+			title="youtube"></iframe>
 	</div>
 </div>
 <h1 class="hwi__title">CHOI YONG HWI (20150220)</h1>
@@ -229,7 +234,7 @@
 
 $(function(){
 	var winWidth = $( window ).width(),
-		winHeight = $( window ).height() + 20,
+		winHeight = $( window ).height(),
 		calc = ( winWidth*9 ) / 16;
 	if( winWidth < winHeight ){
 		$( '#youtube_Video' ).css('height', calc);
@@ -237,7 +242,7 @@ $(function(){
 		$( '.hwi__video>div' ).css('height', calc);
 	} else {
 		$( '#youtube_Video' ).css('height', winHeight);
-		$( '.hwi__video' ).css('height', winHeight);
+		$( '.hwi__video' ).css('height', winHeight + 30);
 		$( '.hwi__video>div' ).css('height', winHeight);
 	}
 });
@@ -330,8 +335,8 @@ function orientationEventHandler(){
 	//--landscope
 	if(orientation == 90 || orientation == -90){
 		setTimeout(function(){
-			$( '#youtube_Video, .hwi__video, .hwi__video > div' ).css('height', $( window ).height() + 300 );
-			$( '.hwi__video--play' ).css('height', $( window ).height() + 300 );
+			$( '#youtube_Video, .hwi__video, .hwi__video > div' ).css('height', $( window ).height() + 30 );
+			$( '.hwi__video--play' ).css('height', $( window ).height() );
 		}, 250);
 	} else {
 	//--portrait
