--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ $(function(){
 		$( '.hwi__video>div' ).css('height', calc);
 	} else {
 		$( '#youtube_Video' ).css('height', winHeight + 100);
-		$( '.hwi__video' ).css({'height': winHeight, 'margin-top': '100px'});
+		$( '.hwi__video' ).css({'height': winHeight, 'margin-bottom': '100px'});
 		$( '.hwi__video>div' ).css('height', winHeight);
 	}
 });
@@ -336,14 +336,14 @@ function orientationEventHandler(){
 	if(orientation == 90 || orientation == -90){
 		setTimeout(function(){
 			$( '#youtube_Video, .hwi__video, .hwi__video > div' ).css('height', $( window ).height() + 100 );
-			$( '.hwi__video' ).css('margin-top', '100px');
+			$( '.hwi__video' ).css('margin-bottom', '100px');
 			$( '.hwi__video--play' ).css('height', $( window ).height() );
 		}, 250);
 	} else {
 	//--portrait
 		setTimeout(function(){
 			$( '#youtube_Video, .hwi__video, .hwi__video>div, .hwi__video--play' ).css('height', ( $( window ).width() * 9 ) / 16 );
-			$( '.hwi__video' ).css('margin-top', '0');
+			$( '.hwi__video' ).css('margin-bottom', '0');
 		}, 250);
 	}
 }
