--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 		</a>
 	</li>
 	<li>
+		<a href="#hwi__video" data-item="5wOIgyWeSwk">
+			<img src="https://i.ytimg.com/vi/5wOIgyWeSwk/mqdefault.jpg" alt="" />
+			<span>
+				<em>인기 애니메이션 노래 모아 듣기♬ (베리 COVER)</em>
+				<span>베리의 헬로토이</span>
+			</span>
+		</a>
+	</li>
+	<li>
 		<a href="#hwi__video" data-item="i4A4b6QqkEE">
 			<img src="https://i.ytimg.com/vi/i4A4b6QqkEE/mqdefault.jpg" alt="" />
 			<span>
