--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ $(function(){
 		$( '.hwi__video' ).css({'height': winHeight});
 		$( '.hwi__video>div' ).css('height', winHeight);
 	}
+	alert(winHeight)
 });
 
 var tag = document.createElement('script');
