--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(function(){
 		$( '.hwi__video' ).css({'height': winHeight});
 		$( '.hwi__video>div' ).css('height', winHeight);
 	}
-	alert(winHeight, window.innerHeight, document.documentElement.clientHeight))
+	alert(winHeight, window.innerHeight, document.documentElement.clientHeight)
 });
 
 var tag = document.createElement('script');
