--- a/index.html
+++ b/index.html
@@ -243,8 +243,9 @@
 
 $(function(){
 	var winWidth = $( window ).width(),
-		winHeight = window.innerHeight ? window.innerHeight : $(window).height(),
-		calc = ( winWidth*9 ) / 16;
+		calc = ( winWidth*9 ) / 16,
+		winHeight = calc;
+		
 	if( winWidth < winHeight ){
 		$( '#youtube_Video' ).css('height', calc);
 		$( '.hwi__video' ).css('height', calc);
