--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ function onPlayerStateChange(event) {
 	});
 
 var winWidth = $( window ).width(),
-	winHeight = $( window ).height(),
-	calc = ( $( window ).width() * 9 ) / 16;
+	calc = ( $( window ).width() * 9 ) / 16,
+	winHeight = calc;
 function orientationEventHandler(){
 	var orientation = window.orientation;
 
