--- a/index.html
+++ b/index.html
@@ -42,6 +42,79 @@
 <div class="hwi__menu">
 	<button type="button" class="bt-menu"><span>메뉴</span></button>
 	<ul class="hwi__list">
+	
+	<li>
+		<a href="#hwi__video" data-item="oRw0WSqOd90">
+			<img src="https://i.ytimg.com/vi/oRw0WSqOd90/mqdefault.jpg" alt="" />
+			<span>
+				<em>ABC 파닉스 동요</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="6hWH_EAWk3U">
+			<img src="https://i.ytimg.com/vi/6hWH_EAWk3U/mqdefault.jpg" alt="" />
+			<span>
+				<em>워드파워 Food 외 50곡</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="aUqFhbXdHGs">
+			<img src="https://i.ytimg.com/vi/aUqFhbXdHGs/mqdefault.jpg" alt="" />
+			<span>
+				<em>Chugga Chugga Choo Choo and more</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="NWflxWgPgNk">
+			<img src="https://i.ytimg.com/vi/NWflxWgPgNk/mqdefault.jpg" alt="" />
+			<span>
+				<em>한글과 알파벳을 함께 익혀요!</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="PZb-76JsJy8">
+			<img src="https://i.ytimg.com/vi/PZb-76JsJy8/mqdefault.jpg" alt="" />
+			<span>
+				<em>핑크퐁 여름 특집 동요🏝</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="yqHuKvJ6OQo">
+			<img src="https://i.ytimg.com/vi/yqHuKvJ6OQo/mqdefault.jpg" alt="" />
+			<span>
+				<em>바다 동물 특집</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="AOngWAA8q_g">
+			<img src="https://i.ytimg.com/vi/AOngWAA8q_g/mqdefault.jpg" alt="" />
+			<span>
+				<em>핑크퐁 BEST 동물 동요 100분</em>
+				<span>핑크퐁</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="LyOm4SuhkNw">
+			<img src="https://i.ytimg.com/vi/LyOm4SuhkNw/mqdefault.jpg" alt="" />
+			<span>
+				<em>I’m So Itchy</em>
+				<span>Nursery Rhymes by Little Angel</span>
+			</span>
+		</a>
+	</li>
 	<li>
 		<a href="#hwi__video" data-item="UBcdtXB3X10">
 			<img src="https://i.ytimg.com/vi/UBcdtXB3X10/mqdefault.jpg" alt="" />
@@ -129,6 +202,15 @@
 			<span>
 				<em>Baby is Here! Welcome Home, Baby Brother</em>
 				<span>Nursery Rhymes by Little Angel</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="KnBsLdW1z1w">
+			<img src="https://i.ytimg.com/vi/KnBsLdW1z1w/mqdefault.jpg" alt="" />
+			<span>
+				<em>동물 동요 모음</em>
+				<span>핑크퐁</span>
 			</span>
 		</a>
 	</li>
