--- a/index.html
+++ b/index.html
@@ -250,6 +250,24 @@
 			</span>
 		</a>
 	</li>
+	<li>
+		<a href="#hwi__video" data-item="YmMEJHm42hI">
+			<img src="https://i.ytimg.com/vi/YmMEJHm42hI/mqdefault.jpg" alt="" />
+			<span>
+				<em>걸그룹 모음</em>
+				<span>idols</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="Rp09qxc83dw">
+			<img src="https://i.ytimg.com/vi/Rp09qxc83dw/mqdefault.jpg" alt="" />
+			<span>
+				<em>걸그룹 모음</em>
+				<span>idols</span>
+			</span>
+		</a>
+	</li>
 	
 	</ul>
 </div>
