--- a/index.html
+++ b/index.html
@@ -37,18 +37,27 @@
 	</div>
 </div>
 <h1 class="hwi__title">CHOI YONG HWI (20150220)</h1>
-<p class="hwi__paragraph">용휘를 위한 youtube 페이지!<br />좋은 것만 보고 커라~ 사랑해요 우리 가족! ^ _^</p>
+<p class="hwi__paragraph">용휘, 정현이를 위한 youtube 페이지!<br />몸과 마음의 ~ 사랑해요 우리 가족! ^ _^</p>
 
 <div class="hwi__menu">
 	<button type="button" class="bt-menu"><span>메뉴</span></button>
 	<ul class="hwi__list">
 	
 	<li>
-		<a href="#hwi__video" data-item="oRw0WSqOd90">
-			<img src="https://i.ytimg.com/vi/oRw0WSqOd90/mqdefault.jpg" alt="" />
+		<a href="#hwi__video" data-item="mIZ7-kKV4pY">
+			<img src="https://i.ytimg.com/vi/mIZ7-kKV4pY/mqdefault.jpg" alt="" />
 			<span>
-				<em>ABC 파닉스 동요</em>
-				<span>핑크퐁</span>
+				<em>모짜르트 합주</em>
+				<span>모짜르트</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="Meb5aQwoUJQ">
+			<img src="https://i.ytimg.com/vi/Meb5aQwoUJQ/mqdefault.jpg" alt="" />
+			<span>
+				<em>모짜르트 피아노</em>
+				<span>모짜르트</span>
 			</span>
 		</a>
 	</li>
