--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 </div>
 <h1 class="hwi__title">CHOI YONG HWI (20150220)</h1>
-<p class="hwi__paragraph">용휘, 정현이를 위한 youtube 페이지!<br />몸과 마음의 ~ 사랑해요 우리 가족! ^ _^</p>
+<p class="hwi__paragraph">용휘, 정현이를 위한 youtube 페이지!<br />몸과 마음의 ~ 사랑해요 우리 가족! ^ o^ </p>
 
 <div class="hwi__menu">
 	<button type="button" class="bt-menu"><span>메뉴</span></button>
