--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
 <body class="atom">
 	<div class="test1" style="margin: 20px 0;border: 1px solid #aaa;">
 		<strong style="display: block;">라인 하이트 auto</strong>
-		<p>달려가는<br>달려가는<br>달려가는</p>
+		<p>달려가는<br>달려가는<br>달려가는2</p>
 	</div>
 	<div class="test1" style="margin: 20px 0;border: 1px solid #aaa;">
 		<strong style="display: block;margin: -5px 0 5px;line-height: 30px;">라인 하이트 30px</strong>
