--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ document.addEventListener('touchmove', function(event) {
 document.addEventListener('gesturestart', function (e) {
     e.preventDefault();
 });
-
+console.log("test");
 </script>
 </body>
 </html>
