--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			<img src="https://i.ytimg.com/vi/i4A4b6QqkEE/mqdefault.jpg" alt="" />
 			<span>
 				<em>아이돌 popular songs</em>
-				<span>idols</span>
+				<span>KPOP</span>
 			</span>
 		</a>
 	</li>
@@ -264,7 +264,7 @@
 			<img src="https://i.ytimg.com/vi/YmMEJHm42hI/mqdefault.jpg" alt="" />
 			<span>
 				<em>걸그룹 모음</em>
-				<span>idols</span>
+				<span>KPOP</span>
 			</span>
 		</a>
 	</li>
@@ -273,16 +273,52 @@
 			<img src="https://i.ytimg.com/vi/Rp09qxc83dw/mqdefault.jpg" alt="" />
 			<span>
 				<em>걸그룹 모음</em>
-				<span>idols</span>
+				<span>KPOP</span>
 			</span>
 		</a>
 	</li>
 	<li>
-		<a href="#hwi__video" data-item="Rp09qxc83dw">
-			<img src="https://i.ytimg.com/vi/Rp09qxc83dw/mqdefault.jpg" alt="" />
+		<a href="#hwi__video" data-item="VbzOs5NY0i0">
+			<img src="https://i.ytimg.com/vi/VbzOs5NY0i0/mqdefault.jpg" alt="" />
+			<span>
+				<em>노래 모음(19~21)</em>
+				<span>KPOP</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="k5-1gcCKNSw">
+			<img src="https://i.ytimg.com/vi/k5-1gcCKNSw/mqdefault.jpg" alt="" />
 			<span>
 				<em>2021년 노래모음</em>
-				<span>idols</span>
+				<span>KPOP</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="mIZ7-kKV4pY&t=5959s">
+			<img src="https://i.ytimg.com/vi/mIZ7-kKV4pY&t=5959s/mqdefault.jpg" alt="" />
+			<span>
+				<em>모짜르트 태교</em>
+				<span>classic</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="uiTrB-zA7bc">
+			<img src="https://i.ytimg.com/vi/uiTrB-zA7bc/mqdefault.jpg" alt="" />
+			<span>
+				<em>바흐 100선</em>
+				<span>classic</span>
+			</span>
+		</a>
+	</li>
+	<li>
+		<a href="#hwi__video" data-item="oXppA7MDOIU">
+			<img src="https://i.ytimg.com/vi/oXppA7MDOIU/mqdefault.jpg" alt="" />
+			<span>
+				<em>힐링 클래식</em>
+				<span>classic</span>
 			</span>
 		</a>
 	</li>
